[package]
name = "libdnd"
version = "0.1.0"
authors = ["Mikhail Pogretskiy <mikhail.pogretskiy@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
